fix: overflow on state layout was causing horizontal scroll (also changed the status navbar); ((this is probably going to have to change again once the main layout issues are addressed...).

--- a/_sass/pages/_state.scss
+++ b/_sass/pages/_state.scss
@@ -4,12 +4,11 @@
 
 .states-nav {
   @include fs-6;
-  display: flex;
-  position: absolute;
   width: 100%;
   z-index: 2;
   top: 0;
   user-select: none;
+  margin-top: -$sp-6;
   
   .states-nav-list {
     overflow-x: scroll;
@@ -43,10 +42,6 @@
   @include mq(md) {
     padding-right: $gutter-spacing-sm;
   }
-}
-
-.states-page {
-  padding-top: $sp-10;
 }
 
 .states-list {
